Only created a link with loho img

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
   <header id="header">
     <div class="menu">
       <div class="contenedor">
-      <img id="header-img" src="https://i.ibb.co/NC8fspc/logo2.png" alt="logo de CRISPR industries">
+        <a href="/index.html">
+          <img id="header-img" src="https://i.ibb.co/NC8fspc/logo2.png" alt="logo de CRISPR industries">
+        </a>
       <p class="logo">CRISPR.INC</p>
       <nav id="nav-bar">        
         <ul class="tipografía-menu">
