--- a/index.html
+++ b/index.html
@@ -98,10 +98,19 @@
   </main>
 
   <footer>
-    
-  
-
+    <div class="contenedor-footer">
+      <ul class="redes">
+        <h2 class="contacto-footer">Contáctanos</h2>
+        <li><a href="#"><ion-icon name="logo-facebook"></ion-icon></a></li>
+        <li><a href="#"><ion-icon name="logo-linkedin"></ion-icon></a></li>
+      </ul> 
+      <ul>
+      <p><ion-icon class="call" name="call-outline"></ion-icon>+(55)90909090</p>
+      <p><ion-icon class="email" name="mail-outline"></ion-icon>ejemplo@email.com</p>
+      </ul> 
+      </div>
   </footer>
-  
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
