--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <title>Industrias CRISPR</title>
 </head>
 
-
 <body>
   <header id="header">
     <div class="menu">
@@ -22,6 +21,7 @@
           <li><a class="nav-link" href="#nav-hero">Nuestros orígenes</a></li>
           <li><a class="nav-link" href="#nav-video">¿Qué es CRISPR-CAS?</a></li>
           <li><a class="nav-link" href="#nav-lista">CRISPR-CAS9 contra tus plagas</a></li>
+          <li><button onclick="modoOscuro()" class="modo-oscuro-btn" ><ion-icon name="moon-outline"></ion-icon></button></li>
         </ul>
       </nav>
       </div>    
@@ -99,18 +99,22 @@
 
   <footer>
     <div class="contenedor-footer">
-      <ul class="redes">
+      <div class="izquierda">
         <h2 class="contacto-footer">Contáctanos</h2>
-        <li><a href="#"><ion-icon name="logo-facebook"></ion-icon></a></li>
-        <li><a href="#"><ion-icon name="logo-linkedin"></ion-icon></a></li>
-      </ul> 
-      <ul>
-      <p><ion-icon class="call" name="call-outline"></ion-icon>+(55)90909090</p>
-      <p><ion-icon class="email" name="mail-outline"></ion-icon>ejemplo@email.com</p>
-      </ul> 
+        <p><ion-icon class="call" name="call-outline"></ion-icon>+(55)90909090</p>
+        <p><ion-icon class="email" name="mail-outline"></ion-icon>ejemplo@email.com</p>
       </div>
+      <div class="derecha">
+        <ul class="redes">
+          <ul>
+          <li><a href="#"><ion-icon class="logo-fb" name="logo-facebook"></ion-icon></a></li>
+          <li><a href="#"><ion-icon name="logo-linkedin"></ion-icon></a></li>
+        </ul>
+      </div>
+    </div>
   </footer>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    <script src="/js/modo-oscuro.js"></script>
 </body>
 </html>
